--- a/index.html
+++ b/index.html
@@ -24,45 +24,64 @@
     
     <div class="container p-2">
         <h2 class="fw-bold">Latest Mars News</h2>
-        <h5 class="fw-bold">Title from web scriping</h5>
-        <p>News body from web scriping</p>
+        <h5 class="fw-bold"><del>from web scriping NASA's Ingenuity Mars Helicopter Succeeds in Historic First Flight</del></h5>
+        <p> <del> body from web scriping The small rotorcraft made history, hovering above Jezero Crater, 
+            demonstrating that powered, controlled flight on another planet is possible.</del></p>
     </div>
 
     <div class="container p-2">
         <div class="row">
             <div class="col-md-8">
                 <h2 class="fw-bold">Featured Mars Image</h2>
+                <img src="..." class="img-fluid" alt="Featured Mars Image">
             </div>
             <div class="col-md-4">
                 <h5 class="fw-bold">Mars Facts</h5>
-                <table class="table table-striped">
+                <table class="table table-striped table-bordered border border-2 border-secondary">
                     <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">First</th>
-                      <th scope="col">Last</th>
-                      <th scope="col">Handle</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <th scope="row">1</th>
-                      <td>Mark</td>
-                      <td>Otto</td>
-                      <td>@mdo</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>Jacob</td>
-                      <td>Thornton</td>
-                      <td>@fat</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td colspan="2">Larry the Bird</td>
-                      <td>@twitter</td>
-                    </tr>
-                    </tbody>
+                        <tr style="text-align: left;">
+                          <th>Description</th>
+                          <th>Mars Values</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Equatorial Diameter:</td>
+                          <td>6,792 km</td>
+                        </tr>
+                        <tr>
+                          <td>Polar Diameter:</td>
+                          <td>6,752 km</td>
+                        </tr>
+                        <tr>
+                          <td>Mass:</td>
+                          <td>6.39 × 10^23 kg (0.11 Earths)</td>
+                        </tr>
+                        <tr>
+                          <td>Moons:</td>
+                          <td>2 (Phobos &amp; Deimos)</td>
+                        </tr>
+                        <tr>
+                          <td>Orbit Distance:</td>
+                          <td>227,943,824 km (1.38 AU)</td>
+                        </tr>
+                        <tr>
+                          <td>Orbit Period:</td>
+                          <td>687 days (1.9 years)</td>
+                        </tr>
+                        <tr>
+                          <td>Surface Temperature:</td>
+                          <td>-87 to -5 °C</td>
+                        </tr>
+                        <tr>
+                          <td>First Record:</td>
+                          <td>2nd millennium BC</td>
+                        </tr>
+                        <tr>
+                          <td>Recorded By:</td>
+                          <td>Egyptian astronomers</td>
+                        </tr>
+                      </tbody>
                   </table>
             </div>
         </div>
@@ -77,7 +96,7 @@
                     <div class="card mb-3 shadow-sm">
                         <img src="..." class="card-img-top" alt="Valles">
                         <div class="card-body">
-                        <h5 class="card-title">Valles</h5>
+                        <h5 class="card-title"><del>Valles</del></h5>
                         </div>
                     </div>
                 </div>
@@ -85,7 +104,7 @@
                     <div class="card mb-3 shadow-sm">
                         <img src="..." class="card-img-top" alt="Valles">
                         <div class="card-body">
-                        <h5 class="card-title">Valles</h5>
+                        <h5 class="card-title"><del>Valles</del></h5>
                         </div>
                     </div>
                 </div>
@@ -95,7 +114,7 @@
                     <div class="card mb-3 shadow-sm">
                         <img src="..." class="card-img-top" alt="Valles">
                         <div class="card-body">
-                        <h5 class="card-title">Valles</h5>
+                        <h5 class="card-title"><del>Valles</del></h5>
                         </div>
                     </div>
                 </div>
@@ -103,7 +122,7 @@
                     <div class="card mb-3 shadow-sm">
                         <img src="..." class="card-img-top" alt="Valles">
                         <div class="card-body">
-                        <h5 class="card-title">Valles</h5>
+                        <h5 class="card-title"><del>Valles</del></h5>
                         </div>
                     </div>
                 </div>
